--- a/index.html
+++ b/index.html
@@ -12,6 +12,132 @@
 </head>
 <body>
 
+
+<header class="header fixed-top">
+    <div class="container header__container">
+        <div class="header__left">
+            <a href="#" class="header__logo"><img src="https://via.placeholder.com/40" alt="Логотип"></a>
+            <nav class="header__nav">
+                <ul class="header__menu">
+                    <li class="header__menu-item"><a href="#">Площадки</a></li>
+                    <li class="header__menu-item"><a href="#">Новости</a></li>
+                    <li class="header__menu-item"><a href="#">Кассы</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header__right">
+            <form action="#" class="header__search">
+                <input type="text" placeholder="Поиск по названию" class="header__search-input">
+                <button type="submit" class="header__search-btn">&#128269;</button>
+            </form>
+            <div class="header__phone">+7 (8482) 39-89-89</div>
+            <div class="header__city">
+                <span class="header__city-icon">&#128205;</span>
+                <span class="header__city-name">Тольятти</span>
+                <span class="header__city-arrow">&#9662;</span>
+            </div>
+            <button class="header__burger navbar-toggler d-md-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#mobileMenu" aria-label="Меню">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </div>
+</header>
+
+<div class="offcanvas offcanvas-start mobile-menu" tabindex="-1" id="mobileMenu">
+    <div class="mobile-menu__header">
+        <a href="#" class="mobile-menu__logo"><img src="https://via.placeholder.com/40" alt="Логотип"></a>
+        <div class="mobile-menu__city">
+            <span class="mobile-menu__city-name">Тольятти</span>
+            <span class="mobile-menu__city-arrow">&#9662;</span>
+        </div>
+        <button type="button" class="mobile-menu__close" data-bs-dismiss="offcanvas" aria-label="Закрыть">&#10005;</button>
+    </div>
+    <nav class="mobile-menu__nav">
+        <ul class="mobile-menu__list">
+            <li class="mobile-menu__item"><a href="#">Площадки</a></li>
+            <li class="mobile-menu__item"><a href="#">Новости</a></li>
+            <li class="mobile-menu__item"><a href="#">Кассы</a></li>
+        </ul>
+    </nav>
+    <div class="mobile-menu__footer">
+        <div class="mobile-menu__phone">+7 (8482) 39-89-89</div>
+        <div class="mobile-menu__socials">
+            <a href="#" class="mobile-menu__social-icon">Telegram</a>
+            <a href="#" class="mobile-menu__social-icon">VK</a>
+        </div>
+    </div>
+</div>
+
+<section class="slider-section">
+    <div class="container">
+        <div id="eventCarousel" class="carousel slide slider" data-bs-ride="carousel" data-bs-interval="100000">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#eventCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Слайд 1"></button>
+                <button type="button" data-bs-target="#eventCarousel" data-bs-slide-to="1" aria-label="Слайд 2"></button>
+                <button type="button" data-bs-target="#eventCarousel" data-bs-slide-to="2" aria-label="Слайд 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item slider__slide active">
+                    <img src="img/main_banner.png" class="d-block w-100 slider__image" alt="Слайд 1">
+                    <div class="slider__overlay"></div>
+                    <div class="slider__info">
+                        <div class="slider__content">
+                            <div class="slider__date">05 июня, 19:00 • ДК «Автоград»</div>
+                            <h3 class="slider__title">КняZz.<br>Ангел и Демон</h3>
+                            <div class="slider__price">от 1 200 ₽</div>
+                        </div>
+                        <div class="slider__tags">
+                            <span class=" tag slider__tag  purple slider__tag ">Пушкинская карта</span>
+                            <span class=" tag slider__tag orange slider__tag ">Юмор</span>
+                            <span class=" tag slider__tag  blue slider__tag ">Детям</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item slider__slide">
+                    <img src="img/main_banner.png" class="d-block w-100 slider__image" alt="Слайд 2">
+                    <div class="slider__overlay"></div>
+                    <div class="slider__info">
+                        <div class="slider__content">
+                            <div class="slider__date">05 июня, 19:00 • ДК «Автоград»</div>
+                            <h3 class="slider__title">Новый концерт группы</h3>
+                            <div class="slider__price">от 1 200 ₽</div>
+                        </div>
+                        <div class="slider__tags">
+                            <span class="slider__tag slider__tag--pushkin">Пушкинская карта</span>
+                            <span class="slider__tag slider__tag--humor">Концерт</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item slider__slide">
+                    <img src="img/main_banner.png" class="d-block w-100 slider__image" alt="Слайд 3">
+                    <div class="slider__overlay"></div>
+                    <div class="slider__info">
+                        <div class="slider__content">
+                            <div class="slider__date">05 июня, 19:00 • ДК «Автоград»</div>
+                            <h3 class="slider__title">Новый концерт группы</h3>
+                            <div class="slider__price">от 1 200 ₽</div>
+                        </div>
+                        <div class="slider__tags">
+                            <span class="slider__tag slider__tag--pushkin">Пушкинская карта</span>
+                            <span class="slider__tag slider__tag--humor">Концерт</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#eventCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </button>
+        </div>
+    </div>
+</section>
+
+
+
+
+
 <div class="container">
     <!-- Фильтры -->
     <div class="filter-block bg-purple text-white rounded-bottom-4 py-2 py-sm-3 px-1 px-md-4">
@@ -1042,9 +1168,12 @@
         </div>
     </div>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
 <script>
+
+
     /*BOOKMARK*/
     document.querySelectorAll('.bookmark-btn').forEach(btn => {
         btn.addEventListener('click', () => {
@@ -1122,6 +1251,17 @@
         // При ресайзе
         window.addEventListener('resize', updateTopButtonText);
     });
+
+
+
+/*ДАТА формат*/
+    document.getElementById('date-input').addEventListener('change', function () {
+        const [year, month, day] = this.value.split('-');
+        const formatted = `${day}/${month}`;
+        document.getElementById('formatted-date').textContent = formatted;
+    });
+
+
 
 
 
